--- a/src/index.css
+++ b/src/index.css
@@ -270,3 +270,66 @@ input[type="checkbox"] {
     padding: 1.6rem 0;
   }
 }
+
+@media screen and (max-width: 475px) {
+  body {
+    font-size: 1.4rem; /* Adjust font size for smaller screens */
+  }
+
+  h1 {
+    font-size: 4.5rem; /* Decrease font size for smaller screens */
+    padding: 1rem 0; /* Reduce padding for smaller screens */
+    word-spacing: 15px; /* Adjust word spacing for smaller screens */
+    letter-spacing: -2px; /* Adjust letter spacing for smaller screens */
+  }
+
+  .add-form {
+    padding: 1.6rem 2rem; /* Reduce padding for smaller screens */
+    flex-direction: column; /* Change flex direction for smaller screens */
+    align-items: center; /* Center align items */
+  }
+
+  h3 {
+    margin-right: 0; /* Remove margin for smaller screens */
+    margin-bottom: 1rem; /* Add margin bottom for smaller screens */
+    font-size: 1.4rem; /* Decrease font size for smaller screens */
+  }
+
+  .add-form select {
+    width: 70%; /* Make inputs and buttons full width */
+    padding: 1rem; /* Adjust padding for smaller screens */
+    font-size: 1.4rem; /* Decrease font size for smaller screens */
+    margin-bottom: 1rem; /* Add margin bottom for smaller screens */
+  }
+
+  .add-form button,
+  .add-form input[type="text"] {
+    width: 70%; /* Make inputs and buttons full width */
+    padding: 1rem; /* Adjust padding for smaller screens */
+    font-size: 1.4rem; /* Decrease font size for smaller screens */
+    margin-bottom: 1rem; /* Add margin bottom for smaller screens */
+  }
+
+  .list {
+    padding: 1.6rem 0; /* Reduce padding for smaller screens */
+    display: flex;
+    align-items: center; /* Center align items */
+    text-align: center; /* Center align text */
+  }
+
+  .list ul {
+    width: 90%; /* Make width 100% for smaller screens */
+  }
+
+  .list li {
+    width: 90%; /* Adjust width for smaller screens */
+  }
+
+  .list li button {
+    font-size: 1.4rem; /* Decrease font size for smaller screens */
+  }
+
+  .stats {
+    padding: 1.6rem 0; /* Reduce padding for smaller screens */
+  }
+}
